[gd_scene load_steps=11 format=2]

[ext_resource path="res://MainLevel.gd" type="Script" id=1]
[ext_resource path="res://Max300Song.gd" type="Script" id=2]
[ext_resource path="res://Sounds/MUSIC/Max 300 - Î©.ogg" type="AudioStream" id=3]
[ext_resource path="res://MUSICstart.gd" type="Script" id=4]
[ext_resource path="res://HitDetector.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://Score.gd" type="Script" id=7]
[ext_resource path="res://TEXTFONT.tres" type="DynamicFont" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Theme" id=2]

default_font = ExtResource( 8 )

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Node" type="Node" parent="." index="0"]

script = ExtResource( 2 )

[node name="SpawnQ" type="Position2D" parent="Node" index="0"]

position = Vector2( 318, -100 )
_sections_unfolded = [ "Transform" ]

[node name="SpawnW" type="Position2D" parent="Node" index="1"]

position = Vector2( 388, -100 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="SpawnE" type="Position2D" parent="Node" index="2"]

position = Vector2( 446, -100 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="SpawnR" type="Position2D" parent="Node" index="3"]

position = Vector2( 510, -100 )
_sections_unfolded = [ "Transform" ]

[node name="SpawnT" type="Position2D" parent="Node" index="4"]

position = Vector2( 574, -100 )
_sections_unfolded = [ "Transform" ]

[node name="SpawnY" type="Position2D" parent="Node" index="5"]

position = Vector2( 638, -100 )
_sections_unfolded = [ "Transform" ]

[node name="SpawnU" type="Position2D" parent="Node" index="6"]

position = Vector2( 702, -100 )
_sections_unfolded = [ "Transform" ]

[node name="MUSIC" type="AudioStreamPlayer" parent="Node" index="7"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="SongTimer" type="Timer" parent="Node" index="8"]

process_mode = 1
wait_time = 180.0
one_shot = false
autostart = false

[node name="HitDetector" type="Area2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( 318, 498 )
scale = Vector2( 1, 0.5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )
_sections_unfolded = [ "Audio Bus", "Collision", "Transform" ]

[node name="Sprite" type="Sprite" parent="HitDetector" index="0"]

texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector" index="1"]

position = Vector2( -0.59034, 0.122976 )
scale = Vector2( 3.01282, 3.14198 )
shape = SubResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="HitDetector6" type="Area2D" parent="." index="2"]

editor/display_folded = true
position = Vector2( 638, 498 )
scale = Vector2( 1, 0.5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="HitDetector6" index="0"]

texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector6" index="1"]

position = Vector2( -0.59034, 0.122976 )
scale = Vector2( 3.01282, 3.14198 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HitDetector7" type="Area2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 702, 498 )
scale = Vector2( 1, 0.5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )
_sections_unfolded = [ "Audio Bus", "Collision", "Pickable", "Transform" ]

[node name="Sprite" type="Sprite" parent="HitDetector7" index="0"]

texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector7" index="1"]

position = Vector2( -0.59034, 0.122976 )
scale = Vector2( 3.01282, 3.14198 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HitDetector2" type="Area2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 382, 498 )
scale = Vector2( 1, 0.5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="HitDetector2" index="0"]

texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector2" index="1"]

position = Vector2( -0.59034, 0.122976 )
scale = Vector2( 3.01282, 3.14198 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HitDetector4" type="Area2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 510, 498 )
scale = Vector2( 1, 0.5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="HitDetector4" index="0"]

texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector4" index="1"]

position = Vector2( -0.59034, 0.122976 )
scale = Vector2( 3.01282, 3.14198 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HitDetector3" type="Area2D" parent="." index="6"]

editor/display_folded = true
position = Vector2( 446, 498 )
scale = Vector2( 1, 0.5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="HitDetector3" index="0"]

texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector3" index="1"]

position = Vector2( -0.59034, 0.122976 )
scale = Vector2( 3.01282, 3.14198 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HitDetector5" type="Area2D" parent="." index="7"]

editor/display_folded = true
position = Vector2( 574, 498 )
scale = Vector2( 1, 0.5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="HitDetector5" index="0"]

texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetector5" index="1"]

position = Vector2( -0.59034, 0.122976 )
scale = Vector2( 3.01282, 3.14198 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="BEATQ" type="Node" parent="." index="8"]

[node name="BEATW" type="Node" parent="." index="9"]

[node name="BEATE" type="Node" parent="." index="10"]

[node name="BEATR" type="Node" parent="." index="11"]

[node name="BEATT" type="Node" parent="." index="12"]

[node name="BEATU" type="Node" parent="." index="13"]

[node name="BEATY" type="Node" parent="." index="14"]

[node name="SCORE" type="Node" parent="." index="15"]

script = ExtResource( 7 )

[node name="ScoreBG" type="ColorRect" parent="SCORE" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 286.0
margin_top = 514.0
margin_right = 734.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Hint", "Rect" ]

[node name="Score" type="RichTextLabel" parent="SCORE" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 287.0
margin_top = 524.0
margin_right = 735.0
margin_bottom = 611.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 2 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "0"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="combo" type="RichTextLabel" parent="SCORE" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 637.0
margin_right = 468.0
margin_bottom = 724.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 2 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "0"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[connection signal="area_entered" from="HitDetector" to="HitDetector" method="_on_HitDetector_area_entered"]

[connection signal="area_exited" from="HitDetector" to="HitDetector" method="_on_HitDetector_area_exited"]

[connection signal="area_entered" from="HitDetector6" to="HitDetector6" method="_on_HitDetector_area_entered"]

[connection signal="area_exited" from="HitDetector6" to="HitDetector6" method="_on_HitDetector_area_exited"]

[connection signal="area_entered" from="HitDetector7" to="HitDetector7" method="_on_HitDetector_area_entered"]

[connection signal="area_exited" from="HitDetector7" to="HitDetector7" method="_on_HitDetector_area_exited"]

[connection signal="area_entered" from="HitDetector2" to="HitDetector2" method="_on_HitDetector_area_entered"]

[connection signal="area_exited" from="HitDetector2" to="HitDetector2" method="_on_HitDetector_area_exited"]

[connection signal="area_entered" from="HitDetector4" to="HitDetector4" method="_on_HitDetector_area_entered"]

[connection signal="area_exited" from="HitDetector4" to="HitDetector4" method="_on_HitDetector_area_exited"]

[connection signal="area_entered" from="HitDetector3" to="HitDetector3" method="_on_HitDetector_area_entered"]

[connection signal="area_exited" from="HitDetector3" to="HitDetector3" method="_on_HitDetector_area_exited"]

[connection signal="area_entered" from="HitDetector5" to="HitDetector5" method="_on_HitDetector_area_entered"]

[connection signal="area_exited" from="HitDetector5" to="HitDetector5" method="_on_HitDetector_area_exited"]


